<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#F5EFEA">

    <!-- Progress -->
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="8dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:progress="70"
        android:progressTint="#F4C542"
        android:backgroundTint="#E0E0E0" />

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/img_food_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_input"
            android:padding="12dp"
            android:text="@string/birth_question"
            android:textSize="16sp" />
        />
    </LinearLayout>

    <!-- Middle -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- DAY -->
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="170dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/day"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/pickerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <!-- MONTH -->
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="170dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/month"
                android:textStyle="bold"/>

            <NumberPicker
                android:id="@+id/pickerMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <!-- YEAR -->
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/year"
                android:textStyle="bold"/>

            <NumberPicker
                android:id="@+id/pickerYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Button -->
    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        android:background="@drawable/bg_button_green"
        android:textColor="#FFFFFF"/>

</LinearLayout>